src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>GradeLevel__c</fullName>
        <label>Grade Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduatein12Months__c</fullName>
        <label>Graduate in 12 Months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GraduationNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduation Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasCorrectProgram__c</fullName>
        <formula>IF(
  AND(
    AND(
      ProgramCode__c != null,
      ProgramCatalogTerm__c != null
    ),
    AND(
     ProgramCode__c = WGUDegreeProgram__r.Name, 
     ProgramCatalogTerm__c = WGUDegreeProgram__r.CatalogTerm__c
    )
  ),
  &apos;true&apos;,
  IF(
    AND(
      OR(
        ProgramCode__c = null,ProgramCatalogTerm__c = null
      ),
      WGUDegreeProgram__c = null
    ),
   &apos;true&apos;,
   &apos;false&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Correct Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricallyAttemptedCUs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CUs that have been attempted, excluding current term</description>
        <label>Historically Attempted CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HistoricallyCompletedCUs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CUs that have been completed, excluding current term completions</description>
        <label>Historically Completed CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HostTeacherLicenseNumber__c</fullName>
        <description>Host Teacher&apos;s state license or certification number usually found on the Host Teacher Application.</description>
        <inlineHelpText>Host Teacher&apos;s state license or certification number.</inlineHelpText>
        <label>Host Teacher License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HouseholdIncome__c</fullName>
        <label>Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDMRequiresUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the IDM to detect if changes occurred on this contact record. Marked true by on update process handler, either workflow or trigger. Marked false when IDM completes processing the record.</description>
        <inlineHelpText>Used by the IDM to detect if changes occurred on this contact record. Marked true by on update process handler, either workflow or trigger. Marked false when IDM completes processing the record.</inlineHelpText>
        <label>IDM Requires Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITINIndividualTaxIdentificationNumber__c</fullName>
        <description>Data collected from the application form</description>
        <label>ITIN - Individual Tax Id Number</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>InitialFEEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Field Experience email has been sent</description>
        <label>Initial FE Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternationalPhone__c</fullName>
        <label>International Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Contact is active (does not apply to student active status)</description>
        <inlineHelpText>Applies only to non-student contacts</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCSDegreeVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CS Degree Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCVOrAppOnFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CV or App on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNSE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the student is currently using the New Student Experience.</description>
        <label>Is NSE Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastDateOfAAV__c</fullName>
        <label>Last Date of AAV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMentorSurvey__c</fullName>
        <description>Mentor surveys are triggered 1 out of every 10 Students Notes entered by a mentor. This is the last date this survey was triggered.</description>
        <inlineHelpText>Mentor surveys are triggered 1 out of every 10 Students Notes entered by a mentor. This is the last date this survey was triggered.</inlineHelpText>
        <label>Last Mentor Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPortalLogin__c</fullName>
        <description>This field should be used to display the last time a student logged into the portal We use this to feed Students at risk.</description>
        <inlineHelpText>Last student portal login date by a Student.</inlineHelpText>
        <label>Last Portal Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastStudentNoteActivity__c</fullName>
        <label>Last Student Note Activity</label>
        <summarizedField>WGUStudentNote__c.CreatedDate</summarizedField>
        <summaryForeignKey>WGUStudentNote__c.Student__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastStudentNote__c</fullName>
        <description>Date of the most recent student note posted by the student&apos;s mentor.</description>
        <label>Last Student Note</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocalizedContactType__c</fullName>
        <description>Type of contact with respect to their position within the school or district</description>
        <label>Localized Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal-Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal-Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Student Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManualRecheckEndDate__c</fullName>
        <label>Manual Recheck End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ManualRecheckStartDate__c</fullName>
        <label>Manual Recheck Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MentorAssignedChangeDate__c</fullName>
        <description>Logs times when a mentor assignment was changed. New changes will be included in a report.</description>
        <label>Mentor Assigned/Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <description>Formula field that copies the mentor email from the user object.</description>
        <formula>Mentor__r.Email</formula>
        <label>Mentor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorName__c</fullName>
        <description>Mentor name to get around permissions issue.</description>
        <formula>Mentor__r.FirstName &amp; &apos; &apos; &amp; Mentor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorPidm__c</fullName>
        <description>The mentor that is assigned to this student</description>
        <label>Mentor Pidm</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MilitaryStatus__c</fullName>
        <description>This displays the Military status of an individual if any.</description>
        <inlineHelpText>This displays the Military status of an individual if any.</inlineHelpText>
        <label>Military Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_WGU_Email__c</fullName>
        <description>This is the my.wgu.edu email address used for students.</description>
        <inlineHelpText>This is the my.wgu.edu email address used for students.</inlineHelpText>
        <label>My WGU Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NYNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NY Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfCourseMentorNotes__c</fullName>
        <description>Roll up summary COUNT of WGUStudentNote__c records that are created by a course mentor.</description>
        <inlineHelpText>Roll up summary COUNT of WGUStudentNote__c records that are created by a course mentor.</inlineHelpText>
        <label>Number of Course Mentor Notes</label>
        <summaryFilterItems>
            <field>WGUStudentNote__c.AuthorIsCourseMentor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WGUStudentNote__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfFEAppDenied__c</fullName>
        <description>Number of times the contact has been denied admission to a DT Cohort.</description>
        <label>NumberOfFEAppDenied</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofFEAppWithdrawn__c</fullName>
        <label>Number of FEApp Withdrawn</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this Contact record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTPThisTerm__c</fullName>
        <label>OTP This Term</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherEmail__c</fullName>
        <description>Alternate email address for contact</description>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>Identifier referencing this contact&apos;s Sungard Banner UUID, which is the key value used internally by SunGard Banner for  referential integrity</description>
        <externalId>true</externalId>
        <inlineHelpText>Specify the numerical identifier of this contact&apos;s SunGard Banner record identifier</inlineHelpText>
        <label>PIDM</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PhoneExtension__c</fullName>
        <label>Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedGraduationDate__c</fullName>
        <label>Planned Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramCatalogTerm__c</fullName>
        <label>Program Catalog Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramStartDate__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramSummary__c</fullName>
        <formula>ProgramCode__c + &quot; (&quot; +   ProgramCatalogTerm__c  + &quot;)&quot;</formula>
        <label>Program Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportStudentConcern__c</fullName>
        <formula>HYPERLINK(SUBSTITUTE(&quot;https://wguir.co1.qualtrics.com/SE/?SID=SV_1BKynH98ZIAYu21&amp;StudentID=&quot;&amp;StudentID__c&amp;&quot;&amp;Name=&quot;&amp;FirstName&amp;&quot; &quot;&amp;LastName, &quot; &quot;, &quot;%20&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=015a00000023UY0&amp;oid=00Df0000002MhY1&quot;,&quot;Report Concern[, 30]&quot;),&quot;_blank&quot;)</formula>
        <label>Report Student Concern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestRefreshFromBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be displayed on end user standard layouts to allow a user to request a refresh banner in the event that the user feel this record is not up to date.</description>
        <label>Request Refresh From Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S2SRecordType__c</fullName>
        <description>RecordType text, used in S2S replication</description>
        <formula>RecordType.DeveloperName</formula>
        <label>S2SRecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFAWEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggered field when the student passes SFAW that shows the corresponding email was sent to them.</description>
        <label>SFAW Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFId__c</fullName>
        <description>SF Id reference field for S2S integration</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School with which the contact is associated</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>School Contacts</relationshipLabel>
        <relationshipName>SchoolContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SocialSecurityNumber__c</fullName>
        <description>SSN from the Application Form</description>
        <label>Social Security Number</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SpecialInstructions__c</fullName>
        <description>Special instructions needed for emails to this contact</description>
        <inlineHelpText>Special instructions needed for emails to this contact</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Student Status,
TB – Term Break
AS – Active Student
AP - Applied
DD – Dropped – Do Not Contact
DR - Dropped
HD - Hold
IG – Inactive due to Graduation
IN - Intake
NA – Not Admitted
ND – Non-Degree
NS – Never Start
WA – Withdrawn Admitted
WE – Withdrawn Enrolled
WI - Withdrawn
XX – Duplicate – Do Not Use</description>
        <inlineHelpText>Indicate the student&apos;s current status at WGU.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentAnalyticMessage__c</fullName>
        <description>Display the latest mentor message based on current student risk score.</description>
        <label>Student Analytic Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <description>Student Identification number, also known as Banner ID.</description>
        <externalId>true</externalId>
        <label>Student ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentOnManualRecheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student currently on a Manual Recheck?</description>
        <label>Student on Manual Recheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentOnTermBreak__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the currently on a term break?</description>
        <label>Student on Term Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentPlannedGraduationDate__c</fullName>
        <description>This is the Student planned graduation date that they have negotiated with their mentor, it is a text field as the data from Banner is a month and year (January 2015) and stored as a String. This is what the mentors like to see!</description>
        <inlineHelpText>Student Planned Graduation Date negotiated with mentor.</inlineHelpText>
        <label>Student Planned Graduation Date</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentPreferredName__c</fullName>
        <description>This holds the Student Preferred Name</description>
        <inlineHelpText>The Student Preferred Name</inlineHelpText>
        <label>Student Preferred Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentRiskScore__c</fullName>
        <label>Student Risk Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TalismaContactId__c</fullName>
        <description>Contact ID carried over from the Talisma system</description>
        <externalId>true</externalId>
        <label>Talisma Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <label>Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermBreakCode__c</fullName>
        <label>Term Break Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermBreakEndDate__c</fullName>
        <label>Term Break End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermBreakStartDate__c</fullName>
        <label>Term Break Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermCUsandSAP__c</fullName>
        <description>Current Term CU and SAP Summary.</description>
        <formula>TEXT(TermCompletedCUs__c) &amp; &quot; of &quot; &amp; TEXT(TermEnrolledCUs__c) &amp; &quot; CUs (&quot; &amp; LEFT(TEXT(TermSap__c*100),5) &amp; &quot;% SAP) &quot; &amp; 
IF(TermSap__c &lt; (2/3), IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LM&amp;oid=00Df0000002MhY1&quot;, &quot;Red Ball&quot;, 15, 15), IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LH&amp;oid=00Df0000002MhY1&quot;, &quot;Green Ball&quot;, 15, 15))</formula>
        <inlineHelpText>Current Term enrolled and completed CUs and SAP %</inlineHelpText>
        <label>Term CUs and SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <description>The current TERM Code year + month</description>
        <formula>TEXT(YEAR(TermStartDate__c))  &amp; 
IF(MONTH(TermStartDate__c) &lt; 10, &apos;0&apos;, NULL) &amp;
TEXT(Month( TermStartDate__c ))</formula>
        <inlineHelpText>Term Code</inlineHelpText>
        <label>Term Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCompletedCUs__c</fullName>
        <formula>CurrentTermCompletedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Completed CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermEnrolledCUs__c</fullName>
        <formula>CurrentTermEnrolledCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Enrolled CUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermNumber__c</fullName>
        <label>Term Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermSap__c</fullName>
        <description>Term SAP Percentage</description>
        <formula>IF( CurrentTermEnrolledCUs__c&gt;0,
CurrentTermCompletedCUs__c  /  CurrentTermEnrolledCUs__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Term SAP Percentage</inlineHelpText>
        <label>Term SAP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>This holds the student timezone. The source of data for this is in Banner and this should be updated each data in the Student Upload process</description>
        <inlineHelpText>Student Timezone</inlineHelpText>
        <label>Timezone</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAttemptedCUs__c</fullName>
        <label>Total Attempted CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCUsandSAP__c</fullName>
        <description>Cumulative [Total] CU and SAP Summary</description>
        <formula>TEXT(TotalCompletedCUs__c) &amp; &quot; of &quot; &amp; TEXT(TotalAttemptedCUs__c) &amp; &quot; CUs (&quot; &amp; LEFT(TEXT(CumulativeSAP__c*100),5) &amp; &quot;% SAP) &quot; &amp; 
IF(CumulativeSAP__c &lt; (2/3), IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LM&amp;oid=00Df0000002MhY1&quot;, &quot;Red Ball&quot;, 15, 15), IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000394LH&amp;oid=00Df0000002MhY1&quot;, &quot;Green Ball&quot;, 15, 15))</formula>
        <inlineHelpText>Cumulative Completed = All Transfer, Requirement Satisfied and Passed Courses 
Cumulative Attempted = All Transfer, Requirement Satisfied and Enrolled Courses 
Cumulative SAP % = Cumulative Completed divided by Cumulative Attempted</inlineHelpText>
        <label>Cumulative CUs and SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCompletedCUs__c</fullName>
        <label>Total Completed CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransferCreditsTotal__c</fullName>
        <label>Transfer Credits Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username for the student that is assigned once the application fee has been paid.</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9 Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGUCreatedDate__c</fullName>
        <description>Date the record was created in its WGU legacy system</description>
        <label>WGU Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for wguProgram</description>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUEmail__c</fullName>
        <description>The student&apos;s @wgu.edu email address.</description>
        <label>WGU Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>isInvalid__c</fullName>
        <formula>((RecordType.DeveloperName ==&apos;StudentRecord&apos; || RecordType.DeveloperName ==&apos;ProspectRecord&apos; || RecordType.DeveloperName ==&apos;AlumniRecord&apos; ) &amp;&amp; AccountId!=null &amp;&amp; Account.StudentContact__c !=null &amp;&amp; Account.StudentContact__c!=Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean set at Contact insert, determined from Record Type</description>
        <label>isPersonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>middleInitial__c</fullName>
        <label>Middle Initial</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllMyStudentsASTB</fullName>
        <columns>FULL_NAME</columns>
        <columns>StudentID__c</columns>
        <columns>ProgramSummary__c</columns>
        <columns>TermNumber__c</columns>
        <columns>TermStartDate__c</columns>
        <columns>TermEndDate__c</columns>
        <columns>TermCompletedCUs__c</columns>
        <columns>TermEnrolledCUs__c</columns>
        <columns>TermSap__c</columns>
        <columns>TotalCompletedCUs__c</columns>
        <columns>TotalAttemptedCUs__c</columns>
        <columns>CumulativeSAP__c</columns>
        <columns>FAADate__c</columns>
        <columns>LastDateOfAAV__c</columns>
        <columns>FinancialAidCheck__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>AS,TB</value>
        </filters>
        <filters>
            <field>CONTACT.PHONE1</field>
            <operation>equals</operation>
        </filters>
        <label>All My Students (AS, TB)</label>
        <sharedTo>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSHIStudents</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Mentor__c</columns>
        <columns>ProgramCode__c</columns>
        <columns>ProgramName__c</columns>
        <columns>TermCode__c</columns>
        <columns>CurrentTermCompletedCUs__c</columns>
        <columns>CurrentTermEnrolledCUs__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.StudentRecord</value>
        </filters>
        <filters>
            <field>ProgramCode__c</field>
            <operation>equals</operation>
            <value>BSHI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>AS</value>
        </filters>
        <label>BSHI Students</label>
        <sharedTo>
            <group>FieldExperienceLogistics</group>
            <group>FieldExperiences</group>
        </sharedTo>
    </listViews>
</CustomObject>